FIX: overflow footer

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 /* Удаление дефолтных стилей */
-body,
-html {
-    margin: 0;
+* {
     padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
+#root {
     width: 100%;
-    height: 100%;
 }
 
 /*.App-logo {*/
