--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -20,6 +20,7 @@
         gap: 20px;
         justify-content: space-between;
         flex: 1;
+        flex-wrap: wrap;
     }
 
     .logoBlock {
